# agendum

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  review-fix-plan.md
.github/workflows/: create-release-pr.yml  dispatch-homebrew-tap.yml  release.yml  test.yml  validate-pr-title.yml  validation.yml
docs/: decisions.md  handoff.md  homebrew-release-discipline-plan.md  live-sync-benchmark.md  plan.md  release-hardening.md  status.md
scripts/: compare_live_sync_bench.py  live_sync_bench.py
src/agendum/: __init__.py  __main__.py  app.py  config.py  db.py  demo.py  gh.py  mcp_server.py  syncer.py  task_api.py  widgets.py
tests/: conftest.py  syncer_test_helpers.py  test_app.py  test_app_interaction.py  test_config.py  test_db.py  test_db_edge_cases.py  test_demo.py  test_gh.py  test_gh_edge_cases.py  test_gh_review.py  test_integration.py  test_live_sync_bench.py  test_main.py  test_mcp_server.py  test_release_workflow_docs.py  test_syncer.py  test_syncer_edge_cases.py  test_task_api.py  test_widgets.py
