[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agendum"
version = "0.1.0"
description = "Terminal dashboard for GitHub PRs, issues, and tasks"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0,<9.0.0",
    "rich>=13.0.0,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agendum = "agendum.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agendum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
